# instagram_tail

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  mkdocs.yml
docs/docs/: index.md
instagram_tail/: __init__.py  _exceptions.py  _handlers.py  _instagram_api.py  _model.py  _params_service.py  _parsers.py  _scraper.py
instagram_tail/api/: exceptions.py  service.py
instagram_tail/auth/: exceptions.py  models.py  password_util.py  web_login_service.py
instagram_tail/clients/: client.py  client_async.py  exceptions.py
instagram_tail/instagram_auth/: models.py  web_login_service.py
instagram_tail/instagram_clients/: instagram_client.py  instagram_client_async.py  no_auth_client.py
instagram_tail/utils/: _accounts.py  _converters.py  _headers.py  _proxy.py  _types.py
local/: Accounts.xlsx  CollectedData.xlsx  CollectedData2.xlsx  CollectedData3.xlsx
