[project]
name = "instagram_tail"
version = "0.0.4"
description = "Instagram data collection library"
authors = [
    {name = "shapranov dmitrii", email = "shapranov.work@gmail.com"},
]
dependencies = ["httpx>=0.28.1", "beautifulsoup4>=4.13.3", "PyNaCl>=1.5.0", "pycryptodomex>=3.22.0"]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "pytest>=8.3.5",
]
docs = [
    "mkdocs-material>=9.6.11",
]
